--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -54,9 +54,10 @@
                         <!--<li class="rss"><a href="http://feeds.feedburner.com/{{ site.author.feedname }}">Subscribe to RSS Feed</a></li>-->
 					</ul>
 				</div><!-- misc -->
+                <h4>under the hood</h4>
 				<p class="licence">
 					Theme: <a href="http://layouts-the.me">the_minimum</a> based on <a href="http://jekyllbootstrap.com/">Jekyll-bootstrap</a>.<br>
-					Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a>.
+                    Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a>.<br>
                     Hosted on <a href="https://pages.github.com/">Github Pages</a>.
 				</p>
 			</div><!-- unit-foot-inner -->
