--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -54,6 +54,18 @@
                         <!--<li class="rss"><a href="http://feeds.feedburner.com/{{ site.author.feedname }}">Subscribe to RSS Feed</a></li>-->
 					</ul>
 				</div><!-- misc -->
+                <div>
+                    <h4>recent posts</h4>
+                    <ul>
+                        {% for post in site.posts limit:8 %}
+                            {% if page.url == post.url %}
+      	                        <li class="active"><a href="{{ BASE_PATH }}{{post.url}}" class="active">{{post.title}}</a></li>
+      	                    {% else %}
+      	                        <li><a href="{{ BASE_PATH }}{{post.url}}">{{post.title}}</a></li>
+      	                    {% endif %}
+                        {% endfor %}
+  	                </ul>
+                </div>
                 <h4>under the hood</h4>
 				<p class="licence">
 					Theme: <a href="http://layouts-the.me">the_minimum</a> based on <a href="http://jekyllbootstrap.com/">Jekyll-bootstrap</a>.<br>
