Set max width for images in pages/posts to 50%

--- a/assets/themes/the-program/css/style.less
+++ b/assets/themes/the-program/css/style.less
@@ -113,6 +113,12 @@ pre {
 					}
 				}
 			}
+            img {
+                max-width: 50%;
+                text-align: center;
+                margin-left:auto;
+                margin-right:auto;
+            }
 		} // .article-inner .entry-content
 
 		.entry-content:first-child h2,
